--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -21,10 +21,11 @@
         <div class="container">
             <p class="titulo-header">Log System</p>
         </div>
-        
-
-        <div class="container container-right">
-
+        <div class="container container-separador">
+            
+        </div>
+        <p style="font-size:27px;  margin-top:15px; margin-bottom: 1rem;">|</p>
+        <div class="container container">
             <input type="checkbox" id="inputLog" class="container-botao" />
             <label for="inputLog" class="lista-input-titulo"> + Add Log Path</label>
             <ul class="lista-input">
