--- a/ConsoleLog/wwwroot/css/Header.css
+++ b/ConsoleLog/wwwroot/css/Header.css
@@ -22,7 +22,7 @@
 
 .lista-input-titulo {
     cursor: pointer;
-    font-size: 20px
+    font-size: var(--tamanho-fonte-titulo);
 }
 
 .lista-input {
@@ -73,9 +73,9 @@
     width: 150px;
     height: 25px;
     background-position: center;
-    margin-top:15px;
+    margin-top: 15px;
     margin-bottom: 1rem;
-    font-size:20px
+    font-size: var(--tamanho-fonte-titulo);
 }
 
 .cabecalho-menu-inputLog {
@@ -93,3 +93,17 @@
     .container-botao:checked + .lista-input-titulo + .lista-input {
         display: block;
     }
+
+@media screen and (max-width: 600px) {
+    .lista-input {
+        left: 30%; /* Largura menor para telas pequenas */
+        width: 200px; /* Largura fixa, ajuste conforme necessário */
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .lista-input {
+        left: 20%; /* Largura ainda menor para telas muito pequenas */
+        width: 150px; /* Largura fixa, ajuste conforme necessário */
+    }
+}
