--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
     </header>
 
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer">
         <div class="container">
             <img src="img/MascoteNovo.png" class="icone-mascote" />
         </div>
