--- a/ConsoleLog/wwwroot/css/Footer.css
+++ b/ConsoleLog/wwwroot/css/Footer.css
@@ -4,10 +4,18 @@
     right: 10px; /* Ajuste a posição como preferir */
     z-index: 9999; /* Um valor alto para garantir que fique na frente */
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     .icone-mascote {
         bottom: 10px;
         right: 30px; 
-        width:250px;
+        width: 250px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .icone-mascote {
+        bottom: 10px;
+        right: 30px;
+        width: 100px;
     }
 }
