--- a/ConsoleLog/wwwroot/css/Footer.css
+++ b/ConsoleLog/wwwroot/css/Footer.css
@@ -3,19 +3,24 @@
     bottom: 10px; /* Ajuste a posição como preferir */
     right: 10px; /* Ajuste a posição como preferir */
     z-index: 9999; /* Um valor alto para garantir que fique na frente */
+    width: 250px;
 }
-@media screen and (max-width: 900px) {
+.footer {
+    /* Altura do rodapé, por exemplo, 10% da altura da viewport */
+    height: 10vh;
+}
+@media screen and (max-width: 1470px) {
     .icone-mascote {
         bottom: 10px;
         right: 30px; 
-        width: 250px;
+        width: 200px;
     }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 400px) {
     .icone-mascote {
         bottom: 10px;
         right: 30px;
-        width: 100px;
+        width: 150px;
     }
 }
