--- a/ConsoleLog/wwwroot/css/site.css
+++ b/ConsoleLog/wwwroot/css/site.css
@@ -26,15 +26,8 @@ a {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-    font-size: 14px;
-}
 
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
+
 
 .border-top {
     border-top: 1px solid #e5e5e5;
@@ -55,15 +48,7 @@ button.accept-policy {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-    position: relative;
-    min-height: 100%;
-}
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
 
 .footer {
     position: absolute;
@@ -71,4 +56,9 @@ body {
     width: 100%;
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
+}
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden; /* Impede a rolagem no corpo todo */
 }
