melhorando responsividade e imagem de fundo

--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
     <section class="section-logs">
         <div class="logs-sidebar">
             <div class="sidebar-header">
-                <p style="align-items:center; font-size:20px">Added Systems</p>
+                <p style="align-items:center; font-size:20px; font-weight:bold;">Added Systems</p>
             </div>
             <ul class="systems-list">
                 @foreach (var system in Model.ListSistemas)
@@ -96,7 +96,7 @@
 
     <footer class="footer">
         <div class="container">
-            <img src="img/MascoteNovo.png" class="icone-mascote" />
+            <img src="img/mascote-preview.png" class="icone-mascote" />
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
