--- a/ConsoleLog/wwwroot/css/Footer.css
+++ b/ConsoleLog/wwwroot/css/Footer.css
@@ -3,7 +3,7 @@
     bottom: 10px; /* Ajuste a posição como preferir */
     right: 10px; /* Ajuste a posição como preferir */
     z-index: 9999; /* Um valor alto para garantir que fique na frente */
-    width: 250px;
+    width: 22vh;
 }
 .footer {
     /* Altura do rodapé, por exemplo, 10% da altura da viewport */
@@ -13,7 +13,7 @@
     .icone-mascote {
         bottom: 10px;
         right: 30px; 
-        width: 200px;
+        width: 19vh;
     }
 }
 
@@ -21,6 +21,6 @@
     .icone-mascote {
         bottom: 10px;
         right: 30px;
-        width: 150px;
+        width: 17vh;
     }
 }
