--- a/ConsoleLog/wwwroot/css/site.css
+++ b/ConsoleLog/wwwroot/css/site.css
@@ -62,3 +62,10 @@ html, body {
     margin: 0;
     overflow: hidden; /* Impede a rolagem no corpo todo */
 }
+body {
+    background-image: url('../img/Pegadas.png');
+    background-repeat: repeat-x;
+    background-size: auto 100%; /* Ajusta a altura da imagem para sempre ser 100% da altura da tela */
+    background-color: #fff;
+    background-position: center top; /* Centraliza horizontalmente e coloca no topo verticalmente */
+}
