Adicionando sistemas e caminho no local storage

--- a/ConsoleLog/Views/Home/Index.cshtml
+++ b/ConsoleLog/Views/Home/Index.cshtml
@@ -65,10 +65,12 @@
     <script type="text/javascript">
         var selecioneSistemaUrl = '@Url.Action("SelecionarSistema", "Home")';
         var obterLogUrl = '@Url.Action("ObterLog", "Home")';
+        var indexSistemas = '@Url.Action("ProcessarSistemas", "Home")';
+        var index = '@Url.Action("Index", "Home")';
+        
     </script>
-    <script src="~/js/LogJS.js" asp-append-version="true"></script>
+    <script src="~/js/LogJS.js" ></script>
 
 </body>
 </html>
-
 
